chore: modifiedh1 to spanish

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,6 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
- 	<h1 class="text-2xl">Another DevBlog</h1>
+ 	<h1 class="text-2xl">El devblog de ColorCode!</h1>
 	<PostsShowcase client:load/>
 </Layout>
