--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,5 +25,6 @@ import Header from "../components/Header.astro";
 		margin: 0;
 		width: 100%;
 		height: 100%;
+		background-color: #fafafa;
 	}
 </style>
