--- a/src/pages/posts/[id].astro
+++ b/src/pages/posts/[id].astro
@@ -32,6 +32,20 @@ const content = await convertToMarkdown(md2);
             <h1>{post.post.title}</h1>
             <hr>
             <div set:html={content} id="content"></div>
+            <h3>Comments</h3>
+            {
+                post.post.comments.map((comment: { content: unknown; }) => {
+                    if(comment){
+                        return(
+                            <hr>
+                            <div>
+                                <p>{comment.content}</p>
+                            </div>
+                            <hr>
+                        )
+                    }
+                })
+            }
         </div>
     </div>
 </Layout>
@@ -40,6 +54,9 @@ const content = await convertToMarkdown(md2);
     h1{
         font-size: 2.5rem;
         margin-bottom: 1rem;
+    }
+    h3{
+        font-size: 1.5rem;
     }
     img{
         mask-image: linear-gradient(black 20%, transparent);
