refactor: replaced buttons for anchors

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 <header class="flex justify-around items-center p-4">
     <p class="text-xl">Console.Blog()</p>
     <div class="flex gap-4">
-        <button class="bg-cyan-500 p-2 rounded">Iniciar Sesion</button>
-        <button class="bg-cyan-500 p-2 rounded">Registrarse</button>
+        <a href="/login" class="bg-cyan-500 p-2 rounded">Iniciar Sesion</a>
+        <a href="/register" class="bg-cyan-500 p-2 rounded">Registrarse</a>
     </div>
 </header>
