chore: updated imports

--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import {LoginForm} from '../components/common/LoginForm.jsx'
+import {LoginForm} from '../components/LoginForm.jsx'
 ---
 
 <Layout>
