feat: add HeaderBtns component

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,10 @@
+---
+import { HeaderBtns } from './common/HeaderBtns'
+---
+
 <header class="flex justify-around items-center p-4">
     <p class="text-xl">Console.Blog()</p>
     <div class="flex gap-4">
-        <a href="/login" class="bg-cyan-500 p-2 rounded">Iniciar Sesion</a>
-        <a href="/register" class="bg-cyan-500 p-2 rounded">Registrarse</a>
+        <HeaderBtns client:load />
     </div>
-</header>
+</h>
