--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import { CategoriesShowcase } from '../components/common/categoriesShowcase';
 import { PostsShowcase } from '../components/common/PostsShowcase';
 import Layout from '../layouts/Layout.astro';
 
@@ -7,6 +8,7 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
- 	<h1 class="text-2xl">El devblog de ColorCode!</h1>
+ 	<h1 class="text-2xl mb-2">El devblog de ColorCode!</h1>
+	<CategoriesShowcase client:load />
 	<PostsShowcase client:load/>
 </Layout>
