--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ import Header from "../components/Header.astro";
 	</head>
 	<body>
 		<Header />
-		<main>
+		<main class="p-4">
 			<slot />
 		</main>
 	</body>
