--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,8 +2,8 @@
 import { HeaderBtns } from './common/HeaderBtns'
 ---
 
-<header class="flex justify-around items-center p-4">
-    <p class="text-xl">Console.Blog()</p>
+<header class="flex justify-between items-center p-5" style="background-color: var(--col-black); background-image: var(--noise);">
+    <a href="/" class="text-4xl font-[yellowhouse] text-amber-500">Console Blog</a>
     <div class="flex gap-4">
         <HeaderBtns client:load />
     </div>
