--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ import Header from "../components/Header.astro";
 	</head>
 	<body>
 		<Header />
-		<main class="p-4">
+		<main class="p-4 pt-0">
 			<FeedbackMessage client:load />
 			<slot />
 		</main>
