--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -33,7 +33,7 @@ Astro.cookies.delete('postId');
 
 <Layout>
     <div class="flex flex-col items-center">
-        <img src={post.post.thumbnailUrl} alt="" class="aspect-video">
+        <img src={post.post.thumbnailUrl} alt="" class="aspect-video w-full">
         <div class="postContainer">
             <div class="flex gap-4">
                 <Stats
