--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,9 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
- 	<h1 class="text-2xl mb-2">El devblog de ColorCode!</h1>
-	<CategoriesShowcase client:load />
-	<PostsShowcase client:load/>
+	<div class="flex flex-col gap-6">
+		<h1 class="text-2xl mt-6">El devblog de ColorCode!</h1>
+		<CategoriesShowcase client:load />
+		<PostsShowcase client:load/>
+	</div>
 </Layout>
