--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,14 +3,13 @@ import { CategoriesShowcase } from '../components/common/categoriesShowcase';
 import { PostsShowcase } from '../components/common/PostsShowcase';
 import Layout from '../layouts/Layout.astro';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+const category = Astro.url.searchParams.get('category');
 ---
 
 <Layout>
 	<div class="flex flex-col gap-6">
 		<h1 class="text-2xl mt-6">El devblog de ColorCode!</h1>
 		<CategoriesShowcase client:load />
-		<PostsShowcase client:load/>
+		<PostsShowcase param={category} client:load/>
 	</div>
 </Layout>
