--- a/src/pages/posts/not-found.astro
+++ b/src/pages/posts/not-found.astro
@@ -3,7 +3,7 @@ import Layout from "../../layouts/Layout.astro";
 ---
 
 <Layout>
-    <h1>Oops! No encontramos el post que estabas buscando</h1>
+    <h1>Oops! We dont found the post that you are looking for!</h1>
     <h2>404 Post Not Found</h2>
-    <a href="/">Volver al inicio</a>
+    <a href="/">Go Back</a>
 </Layout>
