--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -12,6 +12,6 @@ if(user.success){
 ---
 
 <Layout>
-    <h1 class="text-3xl mt-4 mb-4 text-center">Registrarse</h1>
+    <h1 class="text-3xl mt-4 mb-4 text-center">Register</h1>
     <RegisterForm client:load />
 </Layout>
