--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,19 @@
 ---
 import { HeaderBtns } from './common/HeaderBtns'
+import es from'../data/es.json'
+import en from'../data/en.json'
+
+let lang = en;
+
+const url = Astro.url.pathname;
+if(url.includes("/es/")){
+    lang = es;
+}
 ---
 
 <header class="flex justify-between items-center p-5" style="background-color: var(--col-black); background-image: var(--noise);">
     <a href="/" class="text-4xl font-[yellowhouse] text-amber-500">Console Blog</a>
     <div class="flex gap-4">
-        <HeaderBtns client:load />
+        <HeaderBtns translations={lang.HeaderBtns} client:load />
     </div>
 </h>
