--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -2,6 +2,7 @@
 import { RegisterForm } from "../components/RegisterForm";
 import Layout from "../layouts/Layout.astro";
 import { fetchData } from "../utils/utils";
+import en from '../data/en.json';
 
 const cookies = Astro.request.headers.get('cookie') || '';
 const user = await fetchData('/api/users/authUser', 'GET', {Cookie: cookies});
@@ -13,5 +14,5 @@ if(user.success){
 
 <Layout>
     <h1 class="text-3xl mt-4 mb-4 text-center">Register</h1>
-    <RegisterForm client:load />
+    <RegisterForm translations={en.RegisterForm} client:load />
 </Layout>
