--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,13 +2,14 @@
 import { CategoriesShowcase } from '../components/common/categoriesShowcase';
 import { PostsShowcase } from '../components/common/PostsShowcase';
 import Layout from '../layouts/Layout.astro';
+import en from '../data/en.json';
 
 const category = Astro.url.searchParams.get('category');
 ---
 
 <Layout>
 	<div class="flex flex-col gap-6">
-		<CategoriesShowcase client:load />
-		<PostsShowcase param={category} client:load/>
+		<CategoriesShowcase translations={en.categotiesShowcase} client:load />
+		<PostsShowcase translations={en} param={category} client:load/>
 	</div>
 </Layout>
