feat: add route handler

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,13 +6,13 @@ import en from'../data/en.json'
 let lang = en;
 
 const url = Astro.url.pathname;
-if(url.includes("/es/")){
+if(url.includes("/es")){
     lang = es;
 }
 ---
 
 <header class="flex justify-between items-center p-5" style="background-color: var(--col-black); background-image: var(--noise);">
-    <a href="/" class="text-4xl font-[yellowhouse] text-amber-500">Console Blog</a>
+    <a href={url.includes('/es') ? '/es' : '/'} class="text-4xl font-[yellowhouse] text-amber-500">Console Blog</a>
     <div class="flex gap-4">
         <HeaderBtns translations={lang.HeaderBtns} client:load />
     </div>
