--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -10,6 +10,6 @@ const category = Astro.url.searchParams.get('category');
 <Layout>
 	<div class="flex flex-col gap-6">
 		<CategoriesShowcase translations={es.categotiesShowcase} client:load />
-		<PostsShowcase lang="/es" translations={es} param={category} client:load/>
+		<PostsShowcase lang="ES" translations={es} param={category} client:load/>
 	</div>
 </Layout>
