--- a/src/pages/es/posts/not-found.astro
+++ b/src/pages/es/posts/not-found.astro
@@ -3,7 +3,9 @@ import Layout from "../../../layouts/Layout.astro";
 ---
 
 <Layout>
-    <h1>Oops! No encontramos el post que estabas buscando</h1>
-    <h2>404 Post Not Found</h2>
-    <a href="/">Volver al inicio</a>
+    <div class="flex flex-col gap-4 items-center mt-20">
+        <h1 class="text-4xl">Oops! No encontramos el post que estabas buscando</h1>
+        <h2 class="text-xl">404 Post no encontrado</h2>
+        <a href="/es" class="bg-amber-500 p-2 text-[--col-black] border-amber-500 border-2 rounded">Volver al inicio</a>
+    </div>
 </Layout>
