--- a/src/pages/posts/not-found.astro
+++ b/src/pages/posts/not-found.astro
@@ -3,7 +3,9 @@ import Layout from "../../layouts/Layout.astro";
 ---
 
 <Layout>
-    <h1>Oops! We dont found the post that you are looking for!</h1>
-    <h2>404 Post Not Found</h2>
-    <a href="/">Go Back</a>
+    <div class="flex flex-col gap-4 items-center mt-20">
+        <h1 class="text-4xl">Oops! We dont found the post that you are looking for!</h1>
+        <h2 class="text-xl">404 Post Not Found</h2>
+        <a href="/" class="bg-amber-500 p-2 text-[--col-black] border-amber-500 border-2 rounded">Go Back</a>
+    </div>
 </Layout>
