--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,6 +2,7 @@
 import { HeaderBtns } from './common/HeaderBtns'
 import es from'../data/es.json'
 import en from'../data/en.json'
+import { HeaderMenu } from './common/HeaderMenu';
 
 let lang = en;
 
@@ -13,7 +14,25 @@ if(url.includes("/es")){
 
 <header class="flex justify-between items-center p-5" style="background-color: var(--col-black); background-image: var(--noise);">
     <a href={url.includes('/es') ? '/es' : '/'} class="text-4xl font-[yellowhouse] text-amber-500">Console Blog</a>
-    <div class="flex gap-4">
+    <div class="flex gap-4 btnsBox">
         <HeaderBtns translations={lang.HeaderBtns} client:load />
     </div>
-</h>
+    <div class="menu">
+        <HeaderMenu translations={lang.HeaderBtns} client:load />
+    </div>
+</header>
+
+<style>
+    .menu{
+        display: none;
+    }
+
+    @media (max-width: 700px){
+        .btnsBox{
+            display: none;
+        }
+        .menu{
+            display: block;
+        }
+    }
+</style>
