--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -65,4 +65,10 @@ import Header from "../components/Header.astro";
 	.btn-secondary {
   		@apply bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600;
 	}
+
+	@media (max-width: 700px) {
+		main{
+			padding: 0;
+		}
+	}
 </style>
