style: add media queries

--- a/src/pages/es/posts/[slug].astro
+++ b/src/pages/es/posts/[slug].astro
@@ -195,6 +195,11 @@ Astro.cookies.delete('postId');
             border-radius: 4px; 
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
         }
+    }
 
+    @media (max-width: 800px){
+            .postContainer{
+                max-width: 100%;
+            }
     }
 </style>
